# Zap-Browser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
assets/blocklists/: README.md
assets/themes/: dark.qss  light.qss
legacy-cpp/: CMakeLists.txt
legacy-cpp/src/: main.cpp
legacy-cpp/src/ai/: OllamaBridge.cpp
legacy-cpp/src/app/: ZapApp.cpp  ZapApp.h  ZapClient.cpp  ZapClient.h
legacy-cpp/src/data/: HistoryDB.cpp  HistoryDB.h
legacy-cpp/src/privacy/: BlockList.cpp  BlockList.h  CookieIsolator.cpp  CookieIsolator.h  DohResolver.cpp
legacy-cpp/src/ui/: AISidebar.h  AddressBar.h  MainWindow.cpp  SettingsPage.cpp  SettingsPage.h  TabBar.cpp
main/: database.js  main.js  ollama-service.js  preload.js  tor-manager.js
renderer/: index.html
renderer/scripts/: app.js
renderer/styles/: main.css
scripts/: download_cef.ps1
src/: main.cpp
src/ai/: OllamaBridge.cpp  OllamaBridge.h  PageSummarizer.cpp  PageSummarizer.h
src/app/: ZapClient.cpp
src/data/: BookmarkStore.cpp  BookmarkStore.h
src/privacy/: BlockList.cpp  CookieIsolator.cpp  DohResolver.h  TorManager.cpp  TorManager.h
src/ui/: AISidebar.cpp  AddressBar.cpp  MainWindow.cpp  MainWindow.h  TabBar.h
src/update/: AutoUpdater.cpp  AutoUpdater.h
